# boltalka

./: .gitignore  Dockerfile  README.md  config.example.toml  pyproject.toml
docker_composes/: production.yml  tests.yml
docker_composes/production/: docker-compose.yml
dockers/production/: docker-compose.yml
dockers/tests/: docker-compose.yml
src/discoboltalka/: __main__.py  boltalka_api.py  boltalka_gateway_bot.py
src/discoboltalka/api/: __init__.py  boltalka_gateway_bot.py  events.py
src/discoboltalka/api/abstract_repositories/: __init__.py  abstract_dialog_repository.py  dialog.py
src/discoboltalka/api/adapters/: __init__.py  orm.py
src/discoboltalka/api/events/: __init__.py  boltalka.py  boltalka_events.py
src/discoboltalka/api/modules/: __init__.py
src/discoboltalka/api/modules/boltalka_api/: __init__.py
src/discoboltalka/api/query_apis/: __init__.py
src/discoboltalka/api/query_apis/abc/: __init__.py  dialog.py
src/discoboltalka/api/repositories/: __init__.py  dialog.py  dialog_repository.py
src/discoboltalka/api/used_objects/: __init__.py
src/discoboltalka/app/: logic.py  providers.py
src/discoboltalka/app/config/: __init__.py  loader.py
src/discoboltalka/application/: __init__.py  logic.py
src/discoboltalka/application/config/: __init__.py  loader.py  models.py
src/discoboltalka/config/: models.py
src/discoboltalka/models/: __init__.py  embeds.py
src/discoboltalka/utils/: discord.py
tests/: test_dialog_query_api.py
tests/api/query_apis/impl/: dialog.py
tests/discoboltalka/api/: test_database.py
(+2 files in other folders)
