[tool.poetry]
name = "discoboltalka"
version = "0.1.5"
description = "Discord bot for 'Demo Болталка'"
authors = ["lev"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
toml = "^0.10.2"
hikari = "^2.0.0-alpha.108"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
discoboltalka = "discoboltalka.__main__:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
