[tool.poetry]
name = "discoboltalka"
version = "0.2.1"
description = "Discord bot for 'Demo Болталка'"
authors = ["lev"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
toml = "^0.10.2"
hikari = "^2.0.0-alpha.108"
aiohttp = "^3.8.1"
SQLAlchemy = "^1.4.36"
asyncpg = "^0.25.0"
sqlalchemy2-stubs = "^0.0.2-alpha.22"

[tool.poetry.dev-dependencies]
mkinit = "^0.3.4"
black = "^22.3.0"


[tool.poetry.scripts]
discoboltalka = "discoboltalka.__main__:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
